# sudokugen

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: my_benchmark.rs  solve.rs
src/: board.rs  gen.rs  iterators.rs  lib.rs  main.rs  solver.rs
src/solver/: candidate_cache.rs  generator.rs  indexed_map.rs  mod.rs
tests/: integration.rs
