[package]
name = "sudokugen"
description = "Sudokugen is a sudoku solving and generating library"
version = "0.3.0"
authors = ["Vasco Fernandes <vasco.box@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vasc/sudokugen"
keywords = ["sudoku", "puzzle", "solver", "generator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "solve"
harness = false
