[package]
name = "sudokugen"
description = "Sudokugen is a sudoku solving and generating library"
version = "0.3.1"
authors = ["Vasco Fernandes <vasco.box@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vasc/sudokugen"
keywords = ["sudoku", "puzzle", "solver", "generator"]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "solve"
harness = false
