[package]
name = "sudokugen"
description = "Sudokugen is a sudoku solving and generating library"
version = "0.4.0"
authors = ["Vasco Fernandes <vasco.box@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vasc/sudokugen"
keywords = ["sudoku", "puzzle", "solver", "generator"]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "solve"
harness = false
